<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >
    
	<com.cheng.pkeeper.util.TitleView
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:id="@+id/title_layout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:layout_weight="1"
        android:background="#EEC900"
        android:gravity="center"
        android:orientation="horizontal" >

	        <ImageView
	            android:id="@+id/imageView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/global_03" />
			<LinearLayout
			    android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_marginLeft="48dp"
	    		android:orientation="vertical" >
	    		<TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:text="@string/global_keepinfo"
		            android:textColor="#ffffff"
		            android:textSize="18sp" />
		        <TextView
		            android:id="@+id/title_name1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/global_keepinfo_reminder"
		            android:textColor="#ffffff"
		            android:textSize="12sp" />
	        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/title_layout33"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
		android:layout_marginTop="@dimen/activity_empty_margin"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:id="@+id/title_layout3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.50"
            android:background="#EE7600"
            android:gravity="center"
            android:orientation="vertical" >
			
	            <ImageView
	                android:id="@+id/imageView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/global_10" />
			<LinearLayout
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="36dp"
			    android:orientation="vertical" >
	        	<TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:text="@string/global_reportinfo"
		            android:textColor="#ffffff"
		            android:textSize="18sp" />
	        	<TextView
		            android:id="@+id/title_name2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/global_reportinfo_reminder"
		            android:textColor="#ffffff"
		            android:textSize="12sp" />
	        </LinearLayout>
    	</LinearLayout>
    	
    	<LinearLayout
	        android:id="@+id/title_layout1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_weight="2"	        
			android:layout_marginLeft="@dimen/activity_empty_margin" >
	
	        	<LinearLayout
			        android:id="@+id/title_layout4"
			        android:layout_width="match_parent"
			        android:layout_height="0dp"
			        android:background="#1E90FF"
			        android:gravity="center"
			        android:orientation="vertical"
			        android:layout_weight="1" >
					<LinearLayout
					    android:layout_width="wrap_content"
			        	android:layout_height="wrap_content" >
		        	    <ImageView
			                android:id="@+id/imageView4"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:src="@drawable/global_07" />
				     	
				     	<TextView
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:text="@string/global_userinfo"
					            android:layout_gravity="center"
					            android:textColor="#ffffff"
					            android:textSize="18sp" />
				     </LinearLayout>
				     <TextView
					            android:id="@+id/title_name3"
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:layout_marginTop="12dp"
					            android:text="@string/global_userinfo_reminder"
					            android:textColor="#ffffff"
					            android:textSize="12sp" />
				     
		    	</LinearLayout>
		    	<LinearLayout
			        android:id="@+id/title_layout5"
			        android:layout_width="match_parent"
			        android:layout_height="0dp"
			        android:background="#EEB422"
			        android:gravity="center"
			        android:orientation="vertical"
			        android:layout_weight="1"
			        android:layout_marginTop="@dimen/activity_empty_margin" >
					<LinearLayout
					    android:layout_width="wrap_content"
			        	android:layout_height="wrap_content" >
			    	    <ImageView
			                android:id="@+id/imageView5"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:src="@drawable/global_14" />
			        	<TextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/global_houseinfo"
				            android:layout_gravity="center"
				            android:textColor="#ffffff"
				            android:textSize="18sp" />
			        	</LinearLayout>
			        	<TextView
					            android:id="@+id/title_name4"
					            android:layout_width="wrap_content"
					            android:layout_height="wrap_content"
					            android:layout_marginTop="12dp"
					            android:text="@string/global_houseinfo_reminder"
					            android:textColor="#ffffff"
					            android:textSize="12sp" />
			        
    			</LinearLayout>
    	</LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/title_layout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#228B22"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_top_margin"
        android:layout_marginTop="@dimen/activity_empty_margin" >
		<ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/global_19" />
		<LinearLayout
			    android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_marginLeft="48dp"
	    		android:orientation="vertical" >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/global_businessinfo"
	            android:textColor="#ffffff"
	            android:textSize="18sp" />
	      <!--   <TextView
				android:id="@+id/title_name5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/global_businessinfo_reminder"
				android:textColor="#ffffff"
				android:textSize="12sp" /> -->
	        </LinearLayout>
    </LinearLayout>

</LinearLayout>